test/spec/set_local.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/set_local.wast
(;; STDOUT ;;;
assert_invalid error:
  out/third_party/testsuite/set_local.wast:95:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-local-num-vs-num (result i64) (local i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/set_local.wast:95:11: type stack at end of function is 0. expected 1
  (module (func $type-local-num-vs-num (result i64) (local i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/set_local.wast:102:6: type stack size too small at i32.eqz. got 0, expected at least 1
    (i32.eqz (set_local 0 (f32.const 0)))
     ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/set_local.wast:101:11: type stack at end of function is 1. expected 0
  (module (func $type-local-num-vs-num (local f32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/set_local.wast:108:6: type stack size too small at f64.neg. got 0, expected at least 1
    (f64.neg (set_local 1 (i64.const 0)))
     ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/set_local.wast:107:11: type stack at end of function is 1. expected 0
  (module (func $type-local-num-vs-num (local f64 i64)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/set_local.wast:114:58: type stack size too small at set_local. got 0, expected at least 1
  (module (func $type-local-arg-void-vs-num (local i32) (set_local 0 (nop))))
                                                         ^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/set_local.wast:118:57: type mismatch at set_local. got f32, expected i32
...le (func $type-local-arg-num-vs-num (local i32) (set_local 0 (f32.const 0))))
                                                    ^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/set_local.wast:122:57: type mismatch at set_local. got f64, expected f32
...le (func $type-local-arg-num-vs-num (local f32) (set_local 0 (f64.const 0))))
                                                    ^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/set_local.wast:126:61: type mismatch at set_local. got f64, expected i64
...func $type-local-arg-num-vs-num (local f64 i64) (set_local 1 (f64.const 0))))
                                                    ^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/set_local.wast:134:11: type mismatch at function. got i32, expected i64
  (module (func $type-param-num-vs-num (param i32) (result i64) (get_local 0)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/set_local.wast:138:53: type mismatch at i32.eqz. got f32, expected i32
  (module (func $type-param-num-vs-num (param f32) (i32.eqz (get_local 0))))
                                                    ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/set_local.wast:138:11: type stack at end of function is 1. expected 0
  (module (func $type-param-num-vs-num (param f32) (i32.eqz (get_local 0))))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/set_local.wast:142:57: type mismatch at f64.neg. got i64, expected f64
  (module (func $type-param-num-vs-num (param f64 i64) (f64.neg (get_local 1))))
                                                        ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/set_local.wast:142:11: type stack at end of function is 1. expected 0
  (module (func $type-param-num-vs-num (param f64 i64) (f64.neg (get_local 1))))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/set_local.wast:147:58: type stack size too small at set_local. got 0, expected at least 1
  (module (func $type-param-arg-void-vs-num (param i32) (set_local 0 (nop))))
                                                         ^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/set_local.wast:151:57: type mismatch at set_local. got f32, expected i32
...le (func $type-param-arg-num-vs-num (param i32) (set_local 0 (f32.const 0))))
                                                    ^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/set_local.wast:155:57: type mismatch at set_local. got f64, expected f32
...le (func $type-param-arg-num-vs-num (param f32) (set_local 0 (f64.const 0))))
                                                    ^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/set_local.wast:159:61: type mismatch at set_local. got f64, expected i64
...func $type-param-arg-num-vs-num (param f64 i64) (set_local 1 (f64.const 0))))
                                                    ^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/set_local.wast:167:59: local variable out of range (max 2)
  (module (func $unbound-local (local i32 i64) (get_local 3)))
                                                          ^
assert_invalid error:
  out/third_party/testsuite/set_local.wast:171:57: local variable out of range (max 2)
  (module (func $large-local (local i32 i64) (get_local 14324343)))
                                                        ^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/set_local.wast:176:59: local variable out of range (max 2)
  (module (func $unbound-param (param i32 i64) (get_local 2)))
                                                          ^
assert_invalid error:
  out/third_party/testsuite/set_local.wast:180:57: local variable out of range (max 2)
  (module (func $large-param (local i32 i64) (get_local 714324343)))
                                                        ^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/set_local.wast:185:71: local variable out of range (max 3)
  (module (func $unbound-mixed (param i32) (local i32 i64) (get_local 3)))
                                                                      ^
assert_invalid error:
  out/third_party/testsuite/set_local.wast:189:69: local variable out of range (max 3)
  (module (func $large-mixed (param i64) (local i32 i64) (get_local 214324343)))
                                                                    ^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/set_local.wast:194:69: type mismatch at set_local. got f32, expected i32
...pe-mixed-arg-num-vs-num (param f32) (local i32) (set_local 1 (f32.const 0))))
                                                    ^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/set_local.wast:198:73: type mismatch at set_local. got f32, expected i32
...ixed-arg-num-vs-num (param i64 i32) (local f32) (set_local 1 (f32.const 0))))
                                                    ^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/set_local.wast:202:73: type mismatch at set_local. got i64, expected f64
...ixed-arg-num-vs-num (param i64) (local f64 i64) (set_local 1 (i64.const 0))))
                                                    ^^^^^^^^^^^
out/third_party/testsuite/set_local.wast:95: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x0000001f: end_function_body callback failed
out/third_party/testsuite/set_local.wast:101: assert_invalid passed:
  error: type stack size too small at i32.eqz. got 0, expected at least 1
  error: @0x00000021: on_convert_expr callback failed
out/third_party/testsuite/set_local.wast:107: assert_invalid passed:
  error: type stack size too small at f64.neg. got 0, expected at least 1
  error: @0x00000020: on_unary_expr callback failed
out/third_party/testsuite/set_local.wast:114: assert_invalid passed:
  error: type stack size too small at set_local. got 0, expected at least 1
  error: @0x0000001c: on_set_local_expr callback failed
out/third_party/testsuite/set_local.wast:118: assert_invalid passed:
  error: type mismatch in set_local, expected i32 but got f32.
  error: @0x00000020: on_set_local_expr callback failed
out/third_party/testsuite/set_local.wast:122: assert_invalid passed:
  error: type mismatch in set_local, expected f32 but got f64.
  error: @0x00000024: on_set_local_expr callback failed
out/third_party/testsuite/set_local.wast:126: assert_invalid passed:
  error: type mismatch in set_local, expected i64 but got f64.
  error: @0x00000026: on_set_local_expr callback failed
out/third_party/testsuite/set_local.wast:134: assert_invalid passed:
  error: type mismatch in implicit return, expected i64 but got i32.
  error: @0x0000001c: end_function_body callback failed
out/third_party/testsuite/set_local.wast:138: assert_invalid passed:
  error: type mismatch in i32.eqz, expected i32 but got f32.
  error: @0x0000001b: on_convert_expr callback failed
out/third_party/testsuite/set_local.wast:142: assert_invalid passed:
  error: type mismatch in f64.neg, expected f64 but got i64.
  error: @0x0000001c: on_unary_expr callback failed
out/third_party/testsuite/set_local.wast:147: assert_invalid passed:
  error: type stack size too small at set_local. got 0, expected at least 1
  error: @0x0000001b: on_set_local_expr callback failed
out/third_party/testsuite/set_local.wast:151: assert_invalid passed:
  error: type mismatch in set_local, expected i32 but got f32.
  error: @0x0000001f: on_set_local_expr callback failed
out/third_party/testsuite/set_local.wast:155: assert_invalid passed:
  error: type mismatch in set_local, expected f32 but got f64.
  error: @0x00000023: on_set_local_expr callback failed
out/third_party/testsuite/set_local.wast:159: assert_invalid passed:
  error: type mismatch in set_local, expected i64 but got f64.
  error: @0x00000024: on_set_local_expr callback failed
out/third_party/testsuite/set_local.wast:167: assert_invalid passed:
  error: invalid local_index: 3 (max 2)
  error: @0x0000001d: on_get_local_expr callback failed
out/third_party/testsuite/set_local.wast:171: assert_invalid passed:
  error: invalid local_index: 14324343 (max 2)
  error: @0x00000020: on_get_local_expr callback failed
out/third_party/testsuite/set_local.wast:176: assert_invalid passed:
  error: invalid local_index: 2 (max 2)
  error: @0x0000001b: on_get_local_expr callback failed
out/third_party/testsuite/set_local.wast:180: assert_invalid passed:
  error: invalid local_index: 714324343 (max 2)
  error: @0x00000021: on_get_local_expr callback failed
out/third_party/testsuite/set_local.wast:185: assert_invalid passed:
  error: invalid local_index: 3 (max 3)
  error: @0x0000001e: on_get_local_expr callback failed
out/third_party/testsuite/set_local.wast:189: assert_invalid passed:
  error: invalid local_index: 214324343 (max 3)
  error: @0x00000021: on_get_local_expr callback failed
out/third_party/testsuite/set_local.wast:194: assert_invalid passed:
  error: type mismatch in set_local, expected i32 but got f32.
  error: @0x00000021: on_set_local_expr callback failed
out/third_party/testsuite/set_local.wast:198: assert_invalid passed:
  error: type mismatch in set_local, expected i32 but got f32.
  error: @0x00000022: on_set_local_expr callback failed
out/third_party/testsuite/set_local.wast:202: assert_invalid passed:
  error: type mismatch in set_local, expected f64 but got i64.
  error: @0x00000020: on_set_local_expr callback failed
33/33 tests passed.
;;; STDOUT ;;)
